--- a/client/src/component/Join/Join.css
+++ b/client/src/component/Join/Join.css
@@ -20,20 +20,25 @@ body {
   height: 100vh;
   align-items: center;
   background-color: #1a1a1d;
+  /* background-image: url(../../Icons/carton.jfif); */
+  background-repeat: no-repeat;
+  /* background-position: 20vh; */
+  /* background-size: contain; */
 }
 
 .joinInnerContainer {
-  width: 20%;
+  width: 30vw;
 }
 
-.joinInput {
+.jointInput {
   border-radius: 0;
+  height: 50px;
   padding: 15px 20px;
   width: 100%;
 }
 
 .heading {
-  color: white;
+  color: rgb(78, 71, 71);
   font-size: 2.5em;
   padding-bottom: 10px;
   border-bottom: 2px solid white;
